--- a/src/app/pages/certified/certified.component.html
+++ b/src/app/pages/certified/certified.component.html
@@ -4,18 +4,18 @@
         <h2 class="section-title wow fadeInUp">Cursos y Certificados</h2>
         <div class="row">
             <div id="grid">
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3">
+                <div *ngFor="let curso  of _infoServiceCurso.info_cursos" class="portfolio-item col-xs-12 col-sm-4 col-md-3">
                     <div class="portfolio-bg">
                         <div class="portfolio">
                             <div class="tt-overlay"></div>
                             <div class="links">
-                                <a class="image-link" href="../../../assets/images/certified/angular1.jpg"><i class="fa fa-search-plus"></i></a>
+                                <a class="image-link" [href]="curso.link_imagen"><i class="fa fa-search-plus"></i></a>
 
                             </div>
                             <!-- /.links -->
-                            <img src="../../../assets/images/certified/angular1.jpg" alt="image">
+                            <img [src]="curso.link_imagen" alt="image">
                             <div class="portfolio-info">
-                                <h3>Angular Template HTML - Udemy</h3>
+                                <h3>{{curso.nombre}}</h3>
                             </div>
                             <!-- /.portfolio-info -->
                         </div>
@@ -23,66 +23,7 @@
                     </div>
                     <!-- /.portfolio-bg -->
                 </div>
-                <!-- /.portfolio-item -->
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3">
-                    <div class="portfolio-bg">
-                        <div class="portfolio">
-                            <div class="tt-overlay"></div>
-                            <div class="links">
-                                <a class="image-link" href="../../../assets/images/certified/compodoc.jpg"><i class="fa fa-search-plus"></i></a>
 
-                            </div>
-                            <!-- /.links -->
-                            <img src="../../../assets/images/certified/compodoc.jpg" alt="image">
-                            <div class="portfolio-info">
-                                <h3>Compodoc - Udemy</h3>
-                            </div>
-                            <!-- /.portfolio-info -->
-                        </div>
-                        <!-- /.portfolio -->
-                    </div>
-                    <!-- /.portfolio-bg -->
-                </div>
-                <!-- /.portfolio-item -->
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3">
-                    <div class="portfolio-bg">
-                        <div class="portfolio">
-                            <div class="tt-overlay"></div>
-                            <div class="links">
-                                <a class="image-link" href="../../../assets/images/certified/marketing-digital.jpg"><i class="fa fa-search-plus"></i></a>
-
-                            </div>
-                            <!-- /.links -->
-                            <img src="../../../assets/images/certified/marketing-digital.jpg" alt="image">
-                            <div class="portfolio-info">
-                                <h3>The Fundamental of Marketing Digital - Google</h3>
-                            </div>
-                            <!-- /.portfolio-info -->
-                        </div>
-                        <!-- /.portfolio -->
-                    </div>
-                    <!-- /.portfolio-bg -->
-                </div>
-                <!-- /.portfolio-item -->
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3">
-                    <div class="portfolio-bg">
-                        <div class="portfolio">
-                            <div class="tt-overlay"></div>
-                            <div class="links">
-                                <a class="image-link" href="../../../assets/images/certified/marca-personal.jpg"><i class="fa fa-search-plus"></i></a>
-
-                            </div>
-                            <!-- /.links -->
-                            <img src="../../../assets/images/certified/marca-personal.jpg" alt="image">
-                            <div class="portfolio-info">
-                                <h3>Marca Personal - Platzi</h3>
-                            </div>
-                            <!-- /.portfolio-info -->
-                        </div>
-                        <!-- /.portfolio -->
-                    </div>
-                    <!-- /.portfolio-bg -->
-                </div>
                 <!-- /.portfolio-item -->
             </div>
             <!-- /#grid -->
