--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -3,105 +3,21 @@
     <div class="container">
         <h2 class="section-title wow fadeInUp">Portafolio</h2>
 
-        <ul class="list-inline" id="filter">
-            <li><a class="active" data-group="todos">Todos</a></li>
-            <li><a data-group="web">Web</a></li>
-            <li><a data-group="escritorio">Escritorio</a></li>
-        </ul>
-
         <div class="row">
             <div id="grid">
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["todos", "web"]'>
-                    <div class="portfolio-bg">
-                        <div class="portfolio">
-                            <div class="tt-overlay"></div>
-                            <div class="links">
-                                <a class="image-link" href="assets/images/works/ayafotografia.jpg"><i class="fa fa-search-plus"></i></a>
-                                <a href="http://ayafotografia.com/"><i class="fa fa-link"></i></a>
-                            </div>
-                            <!-- /.links -->
-                            <img src="assets/images/works/ayafotografia.jpg" alt="image">
-                            <div class="portfolio-info">
-                                <h3>A&A Fotografía</h3>
-                            </div>
-                            <!-- /.portfolio-info -->
-                        </div>
-                        <!-- /.portfolio -->
-                    </div>
-                    <!-- /.portfolio-bg -->
-                </div>
-                <!-- /.portfolio-item -->
 
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["todos", "escritorio"]'>
+                <div *ngFor="let trabajo of _infoServicePortafolio.info_portafolio" class="portfolio-item col-xs-12 col-sm-4 col-md-3">
                     <div class="portfolio-bg">
                         <div class="portfolio">
                             <div class="tt-overlay"></div>
                             <div class="links">
-                                <a class="image-link" href="assets/images/works/inter-v.jpg"><i class="fa fa-search-plus"></i></a>
+                                <a class="image-link" [href]="trabajo.url_imagen"><i class="fa fa-search-plus"></i></a>
+                                <a [href]="trabajo.link"><i class="fa fa-link"></i></a>
                             </div>
                             <!-- /.links -->
-                            <img src="assets/images/works/inter-v.jpg" alt="image">
+                            <img [src]="trabajo.url_imagen" alt="image">
                             <div class="portfolio-info">
-                                <h3>Inter-V Visteon</h3>
-                            </div>
-                            <!-- /.portfolio-info -->
-                        </div>
-                        <!-- /.portfolio -->
-                    </div>
-                    <!-- /.portfolio-bg -->
-                </div>
-                <!-- /.portfolio-item -->
-
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["todos", "web"]'>
-                    <div class="portfolio-bg">
-                        <div class="portfolio">
-                            <div class="tt-overlay"></div>
-                            <div class="links">
-                                <a class="image-link" href="assets/images/works/sears.jpg"><i class="fa fa-search-plus"></i></a>
-                            </div>
-                            <!-- /.links -->
-                            <img src="assets/images/works/sears.jpg" alt="image">
-                            <div class="portfolio-info">
-                                <h3>Sears</h3>
-                            </div>
-                            <!-- /.portfolio-info -->
-                        </div>
-                        <!-- /.portfolio -->
-                    </div>
-                    <!-- /.portfolio-bg -->
-                </div>
-                <!-- /.portfolio-item -->
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["todos", "web"]'>
-                    <div class="portfolio-bg">
-                        <div class="portfolio">
-                            <div class="tt-overlay"></div>
-                            <div class="links">
-                                <a class="image-link" href="assets/images/works/nutrilev.jpg"><i class="fa fa-search-plus"></i></a>
-                                <a href="http://nutrilevespecializada.com/"><i class="fa fa-link"></i></a>
-                            </div>
-                            <!-- /.links -->
-                            <img src="assets/images/works/nutrilev.jpg" alt="image">
-                            <div class="portfolio-info">
-                                <h3>Nutrilev Nutrición Especializada</h3>
-                            </div>
-                            <!-- /.portfolio-info -->
-                        </div>
-                        <!-- /.portfolio -->
-                    </div>
-                    <!-- /.portfolio-bg -->
-                </div>
-                <!-- /.portfolio-item -->
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["todos", "escritorio"]'>
-                    <div class="portfolio-bg">
-                        <div class="portfolio">
-                            <div class="tt-overlay"></div>
-                            <div class="links">
-                                <a class="image-link" href="assets/images/works/terapias.png"><i class="fa fa-search-plus"></i></a>
-                            </div>
-                            <!-- /.links -->
-                            <img src="assets/images/works/terapias.png" alt="image">
-                            <div class="portfolio-info">
-                                <h3>Terapias CAM</h3>
+                                <h3>{{trabajo.nombre}}</h3>
                             </div>
                             <!-- /.portfolio-info -->
                         </div>
