--- a/src/app/pages/shared/header/header.component.html
+++ b/src/app/pages/shared/header/header.component.html
@@ -16,7 +16,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-                <a class="navbar-brand" href="index.html"><img src="assets/images/logo-op.png" alt=""></a>
+                <a class="navbar-brand" href="index.html"><img [src]="_infoService.info.logo_url" alt=""></a>
             </div>
 
             <div class="collapse navbar-collapse" id="custom-collapse">
